2014-07-01 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix '-n' option management. If the provided argument was an empty
	resolved nodeset, milkcheck ran on all the configuration. (ticket #21)

2014-06-06 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* 'before' keyword is no longer supported and is replaced by 'after'
	  keyword. 'before' is still usable for compatibility but will
	  be removed in a future release.

2013-05-25 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 1.0

2013-04-17 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix action display when list is wider than terminal (ticket #2)
	* Remove escape characters when output is not a tty (ticket #3).

2013-03-18 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.11.1

2013-03-17 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add --nodeps option.

2013-03-15 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix SKIPPED management for Service and ServiceGroup.

2013-03-13 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Remove support for compat code $(...).
	* Better message when using missing dependency.

2013-02-26 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Fix bad inheritance with empty target list.

2013-02-23 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Fix deps issues with service between 2 top services.

2013-02-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.11

2013-02-12 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add --define/--var/-D option for run-specific variables.

2013-02-11 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>
	* Reversed actions can be configured
	* Fix parallelism regression.

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Release: 0.10

2013-02-07 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add vim syntax color support.

2013-02-06 Aurelien Degremont  <aurelien.degremont@cea.fr>
	* Add 'before' option and disable WARNING.

2013-01-24 Aurelien Cedeyn  <aurelien.cedeyn@cea.fr>